# ocr_poetry-venv-setup

./: README.md  pyproject.toml  requirements.txt
poetry-demo/: pyproject.toml
