[project]
name = "poetry-boilerplate"
version = "0.1.0"
description = ""
authors = [
    {name = "Thomas AWOUNFOUET",email = "78394330+tawounfouet@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "numpy (>=2.2.5,<3.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "jupyterlab (>=4.4.2,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
